<resources>
    <string name="app_name">Programacion 3 2020</string>
    <string name="hello_world">HELLO WORLD</string>
    <string name="example_1">León</string>
    <string name="example_2">Tigre</string>
    <string name="example_3">Vaca</string>
    <string name="example_4">Pato</string>
    <string name="example_5">Gato</string>
    <string name="login_description">Ingresa tus datos para ingresar</string>
    <string name="login_switch">Iniciar sesion en modo Administrador</string>
    <string name="login_hint_username">Nombre de Usuario</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_forgot_password">Olvidaste tu contraseña?</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="main_menu_header">Bienvenido!</string>
    <string name="main_menu_button_edit">Editar</string>
    <string name="main_menu_button_products">Productos</string>
    <string name="main_menu_button_delivery">Delivery</string>
    <string name="main_menu_button_exit">Cerrar Sesion</string>
    <string name="abrir_solucion_del_examen">Abrir Solucion del Examen</string>
    <string name="label_on">ON</string>
    <string name="label_off">OFF</string>
    <string name="pay_with_creditcard">Pago Con Tarjeta:</string>
    <string name="share">Share</string>
    <string name="change_photo">Change Photo</string>
    <string name="remember_me">Remember Me</string>
</resources>
