<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_with_creditcard"/>

    <ToggleButton
        android:id="@+id/tb_pago_tarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/label_on"
        android:textOff="@string/label_off"/>

    <ImageView
        android:id="@+id/iv_farmacia"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/farmacia"/>

    <TextView
        android:id="@+id/tv_scaleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <ImageButton
        android:id="@+id/ib_ruler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_ruler"/>

    <RadioGroup
        android:id="@+id/rg_cajeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_cajero_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cajero 1 (Fernando)"/>

        <RadioButton
            android:id="@+id/rb_cajero_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cajero 2 (Victoria)"/>

        <RadioButton
            android:id="@+id/rb_cajero_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cajero 3 (Alvaro)"/>
    </RadioGroup>
</LinearLayout>